--- a/newtab.html
+++ b/newtab.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Word Of Day</title>
+    <title>Distraction Detected!</title>
     <style>
       body{
-        background-color: grey;
+        background-color: rgb(235, 230, 230);
         font-size: 200%;
         display: flex;
         align-items: center;
