Created textbox field

--- a/newtab.html
+++ b/newtab.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>Word Of Day</title>
+    <title>Warning_Page</title>
+    <script src="content.js"></script>
     <style>
       body{
         background-color: grey;
@@ -26,7 +27,7 @@
         margin: 0;
       }
 
-      section p{
+      section p {
         font-size: 3em;
         padding: 0;
         margin: 0;
@@ -41,7 +42,8 @@
       <p>Your end goal was simple:</p>
     </section>
 
+    <textarea id="user_input"></textarea>
+    <input type="button" id="submit_button" value = "Goal Remembered!">    
 
-    <script src="script.js"></script>
   </body>
 </html>
